--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
 	"dependencies": {
 		"axios": "^0.21.4",
 		"core-js": "^3.11.1",
-		"crypto-js": "^4.0.0",
 		"lodash": "^4.17.21",
 		"react-error-boundary": "^3.1.1",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.0",
+		"react-toastify": "^8.0.3",
 		"redux": "^4.1.0",
 		"redux-thunk": "^2.3.0"
 	}
